Fixed wrong color

--- a/src/css/button.css
+++ b/src/css/button.css
@@ -29,5 +29,5 @@ button.dark:hover {
 }
 
 button.dark:active {
-    background-color: #39113e;
+    background-color: #3e1111;
 }
